# motion

./: .gitignore  .project  README.md  flake.nix  pyproject.toml  requirements.txt
activity/: build.gradle
notebooks/: activity.json  infinite-recharge.ipynb  keeper.py  motion.py  profiled-pid.ipynb  swerve.ipynb  template.ipynb  template.py  test.ipynb  trajectory-arrows.ipynb  trajectory-straight.ipynb  trajectory_trace.ipynb
notebooks/Motion Profile/: Motion Profile Velocity.ipynb
notebooks/Wheel Tests/: Wheel Test 2018-09-25.ipynb  Wheel Test 2018-09-27.ipynb  Wheel Test 2018-10-02.ipynb
notebooks/activity/: Activity Display.ipynb  Array Test.ipynb  DB Test.ipynb  DF Derived Cols.ipynb  PostgreSQL JSON Test.ipynb  PostgreSQL hstore Test.ipynb  Ticks Per Inch Test.ipynb  Ticks per Inch - Colson.ipynb  Ticks per Inch - Magic.ipynb
notebooks/classroom/: geometry.ipynb  pose.ipynb  round-trip.ipynb  splines.ipynb  temp.py  trajectory-arrows.ipynb  trajectory.ipynb
notebooks/joystick/: slew-rate.ipynb
notebooks/keeper/: 2021-05-03-15-39.ipynb  2021-05-05-13-18.ipynb  2021-05-05-13-22.ipynb  keeper.py  plots.ipynb
notebooks/pathfinder/: LIDAR correction.ipynb  auton_pathfinder_c2f.ipynb  auton_pathfinder_center_left.ipynb  auton_pathfinder_center_right.ipynb  auton_pathfinder_left_neither.ipynb  auton_pathfinder_left_scale.ipynb  auton_pathfinder_left_switch.ipynb  lidar.ipynb  (+15 more)
pathfinder/: .gitignore
scripts/: flask_server.py  load.py  migrate.py  server.sh
sql/: count_wheel_data.sql  delete_activities.sql  tag_queries.sql  trace_data_unnested.sql
(+102 files in other folders)
